# zumo_STM32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  functions.cmake
core/: BME280.h  CMakeLists.txt  DRV8833.cpp  DRV8833.h  HC-SR04.h  KTIR0711S.h  MCP9700.h  MPU6050.cpp  MPU6050.h  PID.h  ZUMO.h  commands.h  commands_interface.h  commands_runner.cpp  commands_runner.h  encoder.h  hal.h  main.cpp  mean.h
core/GPIO/: GPIO.h
core/STM32F301/: CMakeLists.txt  GPIO.cpp  GPIO.hpp  UART.cpp  UART.hpp
core/ZUMO_devices/: BME280.h  BME280.hpp  CMakeLists.txt  DRV8833.h  DRV8833.hpp  HC-SR04.h  HC-SR04.hpp  KTIR0711S.h  KTIR0711S.hpp  MCP9700.h  MCP9700.hpp  MPU6050.cpp  MPU6050.h  MPU6050.hpp  WS2812B.h  ZUMO.h  ZUMO.hpp  encoder.h  encoder.hpp
core/ZUMO_hal/: CMakeLists.txt  GPIO.hpp  HALina_I2C.hpp  I2C.hpp  PWM.hpp
core/command_terminal/: CMakeLists.txt  Command.h  command.cpp  command_manager.cpp  command_manager.h  commands.cpp  commands.h  fifo.h  terminal.h
core/core/: CMakeLists.txt  UART_crossing.cpp  UART_crossing.h  commands_runner.cpp  hal.h  main.cpp
core/cores/: PID.h  UART_crossing.h  commands_interface.h  commands_runner.cpp  commands_runner.h  hal.h  main.cpp  main.hpp  mean.h
core/terminal/: terminal.h
firmware/: CMakeLists.txt  functions.cmake
firmware/core/: CMakeLists.txt
firmware/core/STM32F301/: UART.cpp  UART.hpp  ring_buffer.h
firmware/core/ZUMO_devices/: BHI160.cpp  BHI160.h  BME280.hpp  CMakeLists.txt  MCP9700.hpp  MPU6050.cpp  MPU6050.hpp  MPU9250.cpp  MPU9250.h  WS2812B.hpp  bhy.cpp  bhy.hpp  bhy_defs.h  encoder.hpp
firmware/core/ZUMO_hal/: CMakeLists.txt  HALina_GPIO.hpp  HALina_I2C.hpp
firmware/core/command_terminal/: CMakeLists.txt  Command.h  command_manager.h  cyclicBuffer.hpp
firmware/core/cores/: CMakeLists.txt  commands_runner.cpp
hardware/: rules.RUL
hardware/3D_parts/: Złożenie1.SLDASM
hardware/Assembly/: Assembly.PrjMbd  Assembly.PrjMbdStructure  MultiBoardSchematic1.MbsDoc
hardware/BHI_EVAL/: BHI_EVAL.PcbDoc  BHI_EVAL.PrjPcb  BHI_EVAL.SchDoc  BHI_EVAL_gerber.rar  Chineesium.OutJob
hardware/battery/: Chineesium.OutJob  battery.PcbDoc  battery.PrjPcb  battery.PrjPcbStructure  battery.SchDoc
hardware/motor_connector/: Chineesium.OutJob  motor_connector.PcbDoc  motor_connector.PrjPcb  motor_connector.PrjPcbStructure  motor_connector.SchDoc
hardware/reflactance_sensors_v1/: Refl.Sens v1.0.PcbDoc  Refl.Sens v1.0.PcbDoc.htm  Reflectance Sensors.PrjPCB  Reflectance Sensors.PrjPCBStructure  Reflectance_Sensors_SCH.SchDoc
hardware/zumo_v2/: Battery Charger.SchDoc  (+18 more)
targets/arm/: .mxproject  CMakeLists.txt  Makefile  settings.cmake  zumo.ioc
targets/arm/Inc/: STM_WS2812B.hpp  STM_hal.h  WS2812B.h  ZUMO_impementation.hpp  command_manager.h  main.h  stm32f1xx_it.h  stm32f3xx_it.h  uart_crossing.h
targets/arm/Src/: STM_hal.cpp  STM_hal.h  ZUMO_implementation.cpp  hal.h  main.c  main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  syscalls.c
targets/x86/unitTests/: CMakeLists.txt  terminal.cpp  test_DRV8833.cpp  test_KTIR0711S.cpp  test_LineDebounce.cpp  test_MCP9700.cpp  test_command.cpp  test_encoder.cpp  test_mean.cpp
(+163 files in other folders)
