include_directories("${CMAKE_CURRENT_SOURCE_DIR}/")

if (${TARGET} STREQUAL "arm")
    set(MCU_DRIVERS_DIRECTORY STM32F301)
    add_subdirectory(STM32F301)
endif()
add_subdirectory(ZUMO_hal)
add_subdirectory(ZUMO_devices)
add_subdirectory(external)
add_subdirectory(command_terminal)
add_subdirectory(cores)
